--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "base64-arraybuffer": "^1.0.2",
     "classnames": "^2.3.1",
     "next": "12.2.2",
     "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-remark": "^2.1.0"
+    "react-remark": "^2.1.0",
+    "react-tabs": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
