--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-remark": "^2.1.0",
-    "react-tabs": "^5.1.0"
+    "react-tabs": "^5.1.0",
+    "react-use": "^17.4.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
