--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-remark": "^2.1.0",
     "react-tabs": "^5.1.0",
     "react-use": "^17.4.0",
-    "redux-thunk": "^2.4.1"
+    "react-use-error-boundary": "^3.0.0",
+    "recoil": "^0.7.4"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
